--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640" />
+
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
     <title>AGILEPack by lukedeo</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
+    <a id="forkme_banner" href="https://github.com/lukedeo/AGILEPack">View on GitHub</a>
+    <div class="shell">
+
       <header>
-        <h1>AGILEPack</h1>
-        <p>Algorithms for Generalized Inference, Learning, and Extraction Package</p>
-
-        <p class="view"><a href="https://github.com/lukedeo/AGILEPack">View the Project on GitHub <small>lukedeo/AGILEPack</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/lukedeo/AGILEPack/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/lukedeo/AGILEPack/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/lukedeo/AGILEPack">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>AGILEPack</h1>
+            <h2>Algorithms for Generalized Inference, Learning, and Extraction Package</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
       </header>
-      <section>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/lukedeo/AGILEPack/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/lukedeo/AGILEPack/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
         <h1>
 <a name="agilepack" class="anchor" href="#agilepack"><span class="octicon octicon-link"></span></a>AGILEPack</h1>
 
@@ -133,12 +151,21 @@
 
 <p>If there's something wrong with <em>anything</em> here, please bother me at <code>luke.deoliveira@yale.edu</code>.</p>
       </section>
+
       <footer>
-        <p>This project is maintained by <a href="https://github.com/lukedeo">lukedeo</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/lukedeo">lukedeo</a> can be found on <a href="https://github.com/lukedeo/AGILEPack">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
